K8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: orderservice
  template: 
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: orderservice
          image: kevinrl02/orderservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice-srv
spec: 
  type: NodePort
  selector: 
    app: orderservice
  ports: 
    - name: orderservice
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice-clusterip-srv
spec : 
  type : ClusterIP
  selector: 
    app : orderservice
  ports : 
  - name : orderservice
    protocol : TCP
    port : 8080
    targetPort: 8080
