K8s/paymentservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice-deployment
spec:
  replicas: 1  # Puedes ajustar el número de réplicas según sea necesario
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
      - name: paymentservice
        image: kevinrl02/paymentservice:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice-srv
spec: 
  type: LoadBalancer
  selector: 
    app: paymentservice
  ports: 
    - name: paymentservice
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice-clusterip-srv
spec: 
  type: ClusterIP
  selector: 
    app: paymentservice
  ports: 
    - name: paymentservice
      protocol: TCP
      port: 8080
      targetPort: 8080
