K8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: productservice
  template: 
    metadata:
      labels:
        app: productservice
    spec:
      containers:
        - name: productservice
          image: kevinrl02/productservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: productservice-srv
spec: 
  type: NodePort
  selector: 
    app: productservice
  ports: 
    - name: productservice
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: productservice-clusterip-srv
spec : 
  type : ClusterIP
  selector: 
    app : productservice
  ports : 
  - name : productservice
    protocol : TCP
    port : 8080
    targetPort: 8080
