K8s/shoppingcart-dployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingcart-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: shoppingcartservice
  template: 
    metadata:
      labels:
        app: shoppingcartservice
    spec:
      containers:
        - name: shoppingcartservice
          image: kevinrl02/shoppingcartservice:latest

---
apiVersion: v1
kind: Service
metadata:
  name: shoppingcartservice-srv
spec: 
  type: NodePort
  selector: 
    app: shoppingcartservice
  ports: 
    - name: shoppingcartservice
      protocol: TCP
      port: 8090
      targetPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingcartservice-clusterip-srv
spec : 
  type : ClusterIP
  selector: 
    app : shoppingcartservice
  ports : 
  - name : shoppingcartservice
    protocol : TCP
    port : 8080
    targetPort: 8080
