K8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: userservice
  template: 
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: kevinrl02/userservice1:latest
---
apiVersion: v1
kind: Service
metadata:
  name: userservice-srv
spec: 
  type: NodePort
  selector: 
    app: userservice
  ports: 
    - name: userservice
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: userservice-clusterip-srv
spec : 
  type : ClusterIP
  selector: 
    app : userservice
  ports : 
  - name : userservice
    protocol : TCP
    port : 8080
    targetPort: 8080
