K8s/ingress-onlineshop.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv-onlineshop
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'GET, POST, PUT, DELETE, OPTIONS' # Add this line
    nginx.ingress.kubernetes.io/cors-allow-headers: 'ngrok-skip-browser-warning, Content-Type, Authorization' # Add custom header here
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:4200"
spec:
  ingressClassName: nginx
  rules:
    - host: onlineshop.com
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: userservice-clusterip-srv   
                port:
                  number: 8080
          - path: /api/c/shoppingcarts
            pathType: Prefix
            backend:
              service:
                name: shoppingcartservice-clusterip-srv
                port:
                  number: 8080
          - path: /api/c/itemsshoppingcart
            pathType: Prefix
            backend:
              service:
                name: shoppingcartservice-clusterip-srv
                port:
                  number: 8080
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: productservice-clusterip-srv
                port:
                  number: 8080
          - path: /api/suppliers
            pathType: Prefix
            backend:
              service:
                name: productservice-clusterip-srv
                port:
                  number: 8080
          - path: /api/supplierproductorders
            pathType: Prefix
            backend:
              service:
                name: productservice-clusterip-srv
                port:
                  number: 8080
          - path: /api/productratings
            pathType: Prefix
            backend:
              service:
                name: productservice-clusterip-srv
                port:
                  number: 8080
          - path: /api/productcategories
            pathType: Prefix
            backend:
              service:
                name: productservice-clusterip-srv
                port:
                  number: 8080
          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: orderservice-clusterip-srv
                port:
                  number: 8080
